--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,10 @@ div.CharContainer {
   margin: auto;
   text-align: left;
 }
+
+div.App > input {
+  border: 1px solid #ccc;
+  padding: 12px;
+  boxShadow: 1px 1px 3px 0px rgba(0,0,0,0.15);
+  margin: 17px;
+}
